# res://Scripts/UI/CharacterPreparation.gd
extends Control

@onready var back_button = $MainContainer/ActionContainer/BackButton
@onready var start_journey_button = $MainContainer/ActionContainer/StartJourneyButton
@onready var reset_stats_button = $MainContainer/ActionContainer/ResetStatsButton
@onready var distribute_stats_button = $MainContainer/ActionContainer/DistributeStatsButton
@onready var soul_shard_storage_label = $SoulShardStorageIndicator/SoulShardsLabel
@onready var strong_souls_label = $StrongSoulsIndicator/StrongSoulsLabel
@onready var great_souls_label = $GreatSoulsIndicator/GreatSoulsLabel
@onready var divine_souls_label = $DivineSoulsIndicator/DivineSoulsLabel

## –í–∏—Ö—Ä—å –¥—É—à –¥–ª—è –∫–æ–ª–æ–¥—Ü–∞
var soul_vortex: Node2D = null

## NPC –°–∫—É–ª—å–ø—Ç–æ—Ä –¥—É—à
var soul_sculptor: Node2D = null

func _ready():
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã
	back_button.pressed.connect(_on_back_button_pressed)
	start_journey_button.pressed.connect(_on_start_journey_button_pressed)
	reset_stats_button.pressed.connect(_on_reset_stats_button_pressed)
	distribute_stats_button.pressed.connect(_on_distribute_stats_button_pressed)
	
	# –°—Ç–∏–ª–∏–∑—É–µ–º –∫–Ω–æ–ø–∫—É "–û—Ç–ø—Ä–∞–≤–∏—Ç—å—Å—è –≤ –ø—É—Ç–µ—à–µ—Å—Ç–≤–∏–µ"
	_style_journey_button()
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Ü–≤–µ—Ç–∞ –∫–Ω–æ–ø–æ–∫
	reset_stats_button.add_theme_color_override("font_color", Color("ff6666"))  # –ö—Ä–∞—Å–Ω—ã–π
	distribute_stats_button.add_theme_color_override("font_color", Color("6666ff"))  # –°–∏–Ω–∏–π
	
	# –°–∫—Ä—ã–≤–∞–µ–º –∫–Ω–æ–ø–∫–∏ - —Ñ—É–Ω–∫—Ü–∏–æ–Ω–∞–ª –ø–µ—Ä–µ–Ω–µ—Å–µ–Ω –≤ –¥–∏–∞–ª–æ–≥ –°–∫—É–ª—å–ø—Ç–æ—Ä–∞ –¥—É—à
	reset_stats_button.visible = false
	distribute_stats_button.visible = false
	
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –º—É–∑—ã–∫—É –¥–ª—è –ø–æ–¥–≥–æ—Ç–æ–≤–∫–∏ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞
	_initialize_character_music()
	
	# –û—Å–∫–æ–ª–∫–∏ –¥—É—à –∑–∞ –∑–∞–±–µ–≥ —É–∂–µ –ø–µ—Ä–µ–Ω–µ—Å–µ–Ω—ã –≤ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ –ø—Ä–∏ –∑–∞–≤–µ—Ä—à–µ–Ω–∏–∏ —É—Ä–æ–≤–Ω—è –∏–ª–∏ –ø–æ—Ä–∞–∂–µ–Ω–∏–∏
	# (–≤ battle_manager.gd –∏–ª–∏ RoomSelector.gd)
	
	# –û–±–Ω–æ–≤–ª—è–µ–º –∏–Ω–¥–∏–∫–∞—Ç–æ—Ä —Ö—Ä–∞–Ω–∏–ª–∏—â–∞ –æ—Å–∫–æ–ª–∫–æ–≤ –¥—É—à
	_update_soul_shard_storage_display()
	
	# –û–±–Ω–æ–≤–ª—è–µ–º –∏–Ω–¥–∏–∫–∞—Ç–æ—Ä—ã –Ω–æ–≤—ã—Ö –≤–∞–ª—é—Ç
	_update_currency_display()
	
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –ø–æ–¥—Å–∫–∞–∑–∫–∏ –¥–ª—è –¥—É—à
	_setup_soul_tooltips()
	
	# –°–æ–∑–¥–∞–µ–º –∏ –∑–∞–ø—É—Å–∫–∞–µ–º –≤–∏—Ö—Ä—å –¥—É—à –¥–ª—è –∫–æ–ª–æ–¥—Ü–∞
	_initialize_soul_vortex()
	
	# –°–æ–∑–¥–∞–µ–º NPC –°–∫—É–ª—å–ø—Ç–æ—Ä–∞ –¥—É—à
	_initialize_soul_sculptor()

func _initialize_soul_vortex() -> void:
	"""–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ—Ç –∞–Ω–∏–º–∞—Ü–∏—é –≤–∏—Ö—Ä—è –¥—É—à –¥–ª—è –∫–æ–ª–æ–¥—Ü–∞"""
	var soul_vortex_script = load("res://Scripts/UI/SoulWellVortex.gd")
	if not soul_vortex_script:
		push_error("–ù–µ —É–¥–∞–ª–æ—Å—å –∑–∞–≥—Ä—É–∑–∏—Ç—å —Å–∫—Ä–∏–ø—Ç SoulWellVortex.gd")
		return
	
	soul_vortex = Node2D.new()
	soul_vortex.set_script(soul_vortex_script)
	soul_vortex.name = "SoulWellVortex"
	soul_vortex.z_index = 10  # –ü–æ–≤–µ—Ä—Ö —Ñ–æ–Ω–∞ (UI –æ–∫–Ω–∞ –Ω–∞ z_index = 100)
	add_child(soul_vortex)

func _initialize_soul_sculptor() -> void:
	"""–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ—Ç NPC –°–∫—É–ª—å–ø—Ç–æ—Ä–∞ –¥—É—à"""
	print("=== –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –°–∫—É–ª—å–ø—Ç–æ—Ä–∞ –¥—É—à ===")
	var sculptor_script = load("res://Scripts/NPC/SoulSculptor.gd")
	if not sculptor_script:
		push_error("–ù–µ —É–¥–∞–ª–æ—Å—å –∑–∞–≥—Ä—É–∑–∏—Ç—å —Å–∫—Ä–∏–ø—Ç SoulSculptor.gd")
		return
	
	soul_sculptor = Node2D.new()
	soul_sculptor.set_script(sculptor_script)
	soul_sculptor.name = "SoulSculptor"
	soul_sculptor.z_index = 15  # –ü–æ–≤–µ—Ä—Ö –≤–∏—Ö—Ä—è (UI –æ–∫–Ω–∞ –Ω–∞ z_index = 100)
	
	# –ü–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä—É–µ–º NPC —Ä—è–¥–æ–º —Å –∫–æ–ª–æ–¥—Ü–µ–º –¥—É—à
	# –¶–µ–Ω—Ç—Ä —ç–∫—Ä–∞–Ω–∞ –ø—Ä–∏–º–µ—Ä–Ω–æ 960x540, –∫–æ–ª–æ–¥–µ—Ü –≤ —Ü–µ–Ω—Ç—Ä–µ
	# –†–∞–∑–º–µ—â–∞–µ–º –°–ü–†–ê–í–ê –æ—Ç –∫–æ–ª–æ–¥—Ü–∞ (–ø—Ä–∞–≤–µ–µ –Ω–∞ 500, –≤—ã—à–µ –Ω–∞ 350 –æ—Ç –Ω–∏–∑–∞)
	var viewport_size = get_viewport_rect().size
	soul_sculptor.position = Vector2(viewport_size.x / 2 + 500, viewport_size.y - 350)
	
	add_child(soul_sculptor)

func open_passive_abilities_window():
	"""–û—Ç–∫—Ä—ã–≤–∞–µ—Ç –æ–∫–Ω–æ –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π (–≤—ã–∑—ã–≤–∞–µ—Ç—Å—è –∏–∑–≤–Ω–µ, –Ω–∞–ø—Ä–∏–º–µ—Ä –æ—Ç NPC)"""
	print("üìö –û—Ç–∫—Ä—ã—Ç–∏–µ –æ–∫–Ω–∞ –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π...")
	
	# –ò–ù–ò–¶–ò–ê–õ–ò–ó–ê–¶–ò–Ø –°–ò–°–¢–ï–ú–´ –ü–ê–°–°–ò–í–ù–´–• –°–ü–û–°–û–ë–ù–û–°–¢–ï–ô
	var player_manager = get_node_or_null("/root/PlayerManager")
	if player_manager:
		var player_data = player_manager.get_player_data()
		if player_data:
			player_data.initialize_passive_system()
			
			# –ò–∑—É—á–∞–µ–º –±–∞–∑–æ–≤—ã–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏ –µ—Å–ª–∏ –µ—â–µ –Ω–µ –∏–∑—É—á–µ–Ω—ã
			var learned_passives = player_data.get_learned_passives()
			var abilities_to_learn = ["player_fortress", "player_strong", "player_wise", "player_vitality"]
			
			for ability_id in abilities_to_learn:
				if ability_id not in learned_passives:
					player_data.learn_passive_ability(ability_id)
	
	_show_passive_abilities_window()

func _on_back_button_pressed():
	"""–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç—Å—è –≤ –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é"""
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	SceneTransition.change_scene("res://Scenes/MainMenu.tscn")

func _on_start_journey_button_pressed():
	"""–ù–∞—á–∏–Ω–∞–µ—Ç –ø—É—Ç–µ—à–µ—Å—Ç–≤–∏–µ - –ø–µ—Ä–µ—Ö–æ–¥–∏—Ç –∫ –≤—ã–±–æ—Ä—É —É—Ä–æ–≤–Ω—è"""
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	# –û–±–Ω–æ–≤–ª—è–µ–º –∏–Ω–¥–∏–∫–∞—Ç–æ—Ä —Ö—Ä–∞–Ω–∏–ª–∏—â–∞ –æ—Å–∫–æ–ª–∫–æ–≤ –¥—É—à –ø–µ—Ä–µ–¥ –Ω–∞—á–∞–ª–æ–º –ø—É—Ç–µ—à–µ—Å—Ç–≤–∏—è
	_update_soul_shard_storage_display()
	
	# –°–±—Ä–∞—Å—ã–≤–∞–µ–º —Å—á–µ—Ç—á–∏–∫ –æ—Å–∫–æ–ª–∫–æ–≤ –¥—É—à –∑–∞ –∑–∞–±–µ–≥ –ø—Ä–∏ –Ω–∞—á–∞–ª–µ –Ω–æ–≤–æ–≥–æ –∑–∞–±–µ–≥–∞
	var soul_shard_manager = get_node_or_null("/root/SoulShard")
	if soul_shard_manager:
		soul_shard_manager.reset_run_soul_shards()
	
	# –í–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∑–∞—Ä—è–¥—ã –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∏—è –¥—É—à–∏ –ø—Ä–∏ –≤—Ö–æ–¥–µ –Ω–∞ —É—Ä–æ–≤–µ–Ω—å
	var soul_restoration_manager = get_node_or_null("/root/SoulRestorationManager")
	if soul_restoration_manager:
		soul_restoration_manager.restore_all_charges()
	
	# –ü–µ—Ä–µ—Ö–æ–¥–∏–º –∫ –≤—ã–±–æ—Ä—É –ª–æ–∫–∞—Ü–∏–∏
	SceneTransition.change_scene("res://Scenes/LocationSelector.tscn")

func _show_passive_abilities_window():
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç –æ–∫–Ω–æ –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π"""
	# –ü–æ–ª—É—á–∞–µ–º –¥–∞–Ω–Ω—ã–µ –∏–≥—Ä–æ–∫–∞
	var player_manager = get_node_or_null("/root/PlayerManager")
	if not player_manager:
		print("PlayerManager –Ω–µ –Ω–∞–π–¥–µ–Ω")
		return
	
	var player_data = player_manager.get_player_data()
	if not player_data:
		print("–î–∞–Ω–Ω—ã–µ –∏–≥—Ä–æ–∫–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω—ã")
		return
	
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º —Å–∏—Å—Ç–µ–º—É –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	player_data.initialize_passive_system()
	
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∑–∞–≤–µ—Ä—à–µ–Ω–∞
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º –ø–æ–ª–Ω–æ—Ü–µ–Ω–Ω–æ–µ –æ–∫–Ω–æ –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	var passive_window_scene = preload("res://Scenes/UI/PassiveAbilitiesWindow.tscn")
	var passive_window = passive_window_scene.instantiate()
	passive_window.z_index = 100  # –ü–æ–≤–µ—Ä—Ö –≤—Å–µ–≥–æ (NPC –Ω–∞ 15, –≤–∏—Ö—Ä—å –Ω–∞ 10)
	add_child(passive_window)



func _on_distribute_stats_button_pressed():
	"""–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –Ω–∞–∂–∞—Ç–∏–µ –∫–Ω–æ–ø–∫–∏ —Ä–∞—Å–ø—Ä–µ–¥–µ–ª–µ–Ω–∏—è —Ö–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫"""
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	print("–û—Ç–∫—Ä—ã–≤–∞–µ–º —ç–∫—Ä–∞–Ω —Ö–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫...")
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º —Å—Ü–µ–Ω—É StatsScreen
	var stats_scene = preload("res://Scenes/StatsScreen.tscn")
	var stats_instance = stats_scene.instantiate()
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø—Ä–µ–¥—ã–¥—É—â—É—é —Å—Ü–µ–Ω—É
	stats_instance.set_previous_scene("res://Scenes/UI/CharacterPreparation.tscn")
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º z_index –¥–ª—è –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏—è –ø–æ–≤–µ—Ä—Ö –≤—Å–µ–≥–æ
	stats_instance.z_index = 100  # –ü–æ–≤–µ—Ä—Ö –≤—Å–µ–≥–æ (NPC –Ω–∞ 15, –≤–∏—Ö—Ä—å –Ω–∞ 10)
	
	# –î–æ–±–∞–≤–ª—è–µ–º –∫ —Ç–µ–∫—É—â–µ–π —Å—Ü–µ–Ω–µ
	add_child(stats_instance)
	
	# –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ –æ–±–Ω–æ–≤–ª—è–µ–º –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏
	stats_instance.update_display()
	
	print("–≠–∫—Ä–∞–Ω —Ö–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫ –æ—Ç–∫—Ä—ã—Ç —Å –≤–æ–∑–≤—Ä–∞—Ç–æ–º –Ω–∞ CharacterPreparation")

func _on_reset_stats_button_pressed():
	"""–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –Ω–∞–∂–∞—Ç–∏–µ –∫–Ω–æ–ø–∫–∏ —Å–±—Ä–æ—Å–∞ —Ö–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫"""
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	print("–°–±—Ä–æ—Å —Ö–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫ –∫ –¥–µ—Ñ–æ–ª—Ç–Ω—ã–º –∑–Ω–∞—á–µ–Ω–∏—è–º...")
	
	var player_manager = get_node_or_null("/root/PlayerManager")
	if player_manager:
		var player_data = player_manager.get_player_data()
		if player_data:
			player_data.reset_stats_to_default()
			print("–•–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫–∏ —Å–±—Ä–æ—à–µ–Ω—ã –∫ –¥–µ—Ñ–æ–ª—Ç–Ω—ã–º –∑–Ω–∞—á–µ–Ω–∏—è–º!")
			
			# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ –æ–± —É—Å–ø–µ—Ö–µ
			_show_message("–•–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫–∏ —Å–±—Ä–æ—à–µ–Ω—ã –∫ –¥–µ—Ñ–æ–ª—Ç–Ω—ã–º –∑–Ω–∞—á–µ–Ω–∏—è–º!")
		else:
			print("–û–®–ò–ë–ö–ê: PlayerData –Ω–µ –Ω–∞–π–¥–µ–Ω")
			_show_message("–û–®–ò–ë–ö–ê: –î–∞–Ω–Ω—ã–µ –∏–≥—Ä–æ–∫–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω—ã!")
	else:
		print("–û–®–ò–ë–ö–ê: PlayerManager –Ω–µ –Ω–∞–π–¥–µ–Ω")
		_show_message("–û–®–ò–ë–ö–ê: –ú–µ–Ω–µ–¥–∂–µ—Ä –∏–≥—Ä–æ–∫–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω!")

func _show_message(text: String):
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç —Å–æ–æ–±—â–µ–Ω–∏–µ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—é"""
	var dialog = AcceptDialog.new()
	dialog.title = "–ò–Ω—Ñ–æ—Ä–º–∞—Ü–∏—è"
	dialog.dialog_text = text
	# AcceptDialog - —ç—Ç–æ Window, popup –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –æ—Ç–æ–±—Ä–∞–∂–∞–µ—Ç—Å—è –ø–æ–≤–µ—Ä—Ö –≤—Å–µ–≥–æ
	add_child(dialog)
	dialog.popup_centered()
	dialog.connect("confirmed", Callable(dialog, "queue_free"))
	dialog.connect("canceled", Callable(dialog, "queue_free"))


func _on_ability_learning_button_pressed(initial_tab: int = 0):
	"""–û—Ç–∫—Ä—ã–≤–∞–µ—Ç —ç–∫—Ä–∞–Ω –∏–∑—É—á–µ–Ω–∏—è –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	initial_tab: 0 = –û–±—ã—á–Ω—ã–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏, 1 = –†–∞–∑–≤–∏—Ç–∏–µ –¥—É—à–∏"""
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º —Å—Ü–µ–Ω—É —ç–∫—Ä–∞–Ω–∞ –∏–∑—É—á–µ–Ω–∏—è –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	var ability_learning_scene = preload("res://Scenes/UI/AbilityLearningScreen.tscn")
	var ability_learning_instance = ability_learning_scene.instantiate()
	ability_learning_instance.z_index = 100  # –ü–æ–≤–µ—Ä—Ö –≤—Å–µ–≥–æ (NPC –Ω–∞ 15, –≤–∏—Ö—Ä—å –Ω–∞ 10)
	add_child(ability_learning_instance)
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –Ω–∞—á–∞–ª—å–Ω—É—é –≤–∫–ª–∞–¥–∫—É, –µ—Å–ª–∏ —É–∫–∞–∑–∞–Ω–∞
	if ability_learning_instance.has_method("set_initial_tab"):
		ability_learning_instance.set_initial_tab(initial_tab)
	
	print("–û—Ç–∫—Ä—ã—Ç —ç–∫—Ä–∞–Ω –∏–∑—É—á–µ–Ω–∏—è –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π (–≤–∫–ª–∞–¥–∫–∞: ", initial_tab, ")")

func _update_soul_shard_storage_display():
	"""–û–±–Ω–æ–≤–ª—è–µ—Ç –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–∞ –æ—Å–∫–æ–ª–∫–æ–≤ –¥—É—à –≤ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ"""
	var soul_shard_manager = get_node_or_null("/root/SoulShard")
	if soul_shard_manager and soul_shard_storage_label:
		var total_soul_shards = soul_shard_manager.get_soul_shards()
		soul_shard_storage_label.text = "–ö–æ–ª–æ–¥–µ—Ü –¥—É—à: %d" % total_soul_shards

func _update_currency_display():
	"""–û–±–Ω–æ–≤–ª—è–µ—Ç –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ –≤—Å–µ—Ö –≤–∞–ª—é—Ç"""
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–∏–ª—å–Ω—ã–µ –¥—É—à–∏
	var strong_souls_manager = get_node_or_null("/root/StrongSouls")
	if strong_souls_manager and strong_souls_label:
		var strong_souls = strong_souls_manager.get_strong_souls()
		strong_souls_label.text = "–°–∏–ª—å–Ω—ã–µ –¥—É—à–∏: %d" % strong_souls
	
	# –û–±–Ω–æ–≤–ª—è–µ–º –≤–µ–ª–∏–∫–∏–µ –¥—É—à–∏
	var great_souls_manager = get_node_or_null("/root/GreatSouls")
	if great_souls_manager and great_souls_label:
		var great_souls = great_souls_manager.get_great_souls()
		great_souls_label.text = "–í–µ–ª–∏–∫–∏–µ –¥—É—à–∏: %d" % great_souls
	
	# –û–±–Ω–æ–≤–ª—è–µ–º –±–æ–∂–µ—Å—Ç–≤–µ–Ω–Ω—ã–µ –¥—É—à–∏
	var divine_souls_manager = get_node_or_null("/root/DivineSouls")
	if divine_souls_manager and divine_souls_label:
		var divine_souls = divine_souls_manager.get_divine_souls()
		divine_souls_label.text = "–ë–æ–∂–µ—Å—Ç–≤–µ–Ω–Ω—ã–µ –¥—É—à–∏: %d" % divine_souls

func _setup_soul_tooltips():
	"""–ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ—Ç –ø–æ–¥—Å–∫–∞–∑–∫–∏ –¥–ª—è —Ä–∞–∑–ª–∏—á–Ω—ã—Ö —Ç–∏–ø–æ–≤ –¥—É—à"""
	# –ü–æ–¥—Å–∫–∞–∑–∫–∞ –¥–ª—è –∫–æ–ª–æ–¥—Ü–∞ –¥—É—à (–æ–±—ã—á–Ω—ã–µ –æ—Å–∫–æ–ª–∫–∏ –¥—É—à)
	if soul_shard_storage_label:
		soul_shard_storage_label.mouse_filter = Control.MOUSE_FILTER_STOP
		soul_shard_storage_label.tooltip_text = "–û—Å–∫–æ–ª–∫–∏ –¥—É—à - –±–∞–∑–æ–≤–∞—è –≤–∞–ª—é—Ç–∞ –¥–ª—è –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π.\n–ü–æ–ª—É—á–∞—é—Ç—Å—è –∑–∞ –ø–æ–±–µ–¥—É –Ω–∞–¥ –ª—é–±—ã–º–∏ –≤—Ä–∞–≥–∞–º–∏."
	
	# –ü–æ–¥—Å–∫–∞–∑–∫–∞ –¥–ª—è —Å–∏–ª—å–Ω—ã—Ö –¥—É—à
	if strong_souls_label:
		strong_souls_label.mouse_filter = Control.MOUSE_FILTER_STOP
		strong_souls_label.tooltip_text = "–°–∏–ª—å–Ω—ã–µ –¥—É—à–∏ –ø–æ–ª—É—á–∞—é—Ç—Å—è –∑–∞ –ø–æ–±–µ–¥—É –Ω–∞–¥ —ç–ª–∏—Ç–Ω—ã–º–∏ –≤—Ä–∞–≥–∞–º–∏.\n–≠–ª–∏—Ç–Ω—ã–µ –≤—Ä–∞–≥–∏ –¥–æ—Å—Ç—É–ø–Ω—ã —Å–æ 2 —É—Ä–æ–≤–Ω—è —Å–ª–æ–∂–Ω–æ—Å—Ç–∏ –ª–æ–∫–∞—Ü–∏–∏."
	
	# –ü–æ–¥—Å–∫–∞–∑–∫–∞ –¥–ª—è –≤–µ–ª–∏–∫–∏—Ö –¥—É—à
	if great_souls_label:
		great_souls_label.mouse_filter = Control.MOUSE_FILTER_STOP
		great_souls_label.tooltip_text = "–í–µ–ª–∏–∫–∏–µ –¥—É—à–∏ –ø–æ–ª—É—á–∞—é—Ç—Å—è –∑–∞ –ø–æ–±–µ–¥—É –Ω–∞–¥ —Ñ–∏–Ω–∞–ª—å–Ω—ã–º –±–æ—Å—Å–æ–º –ª–æ–∫–∞—Ü–∏–∏.\n–ò—Å–ø–æ–ª—å–∑—É—é—Ç—Å—è –¥–ª—è –∏–∑—É—á–µ–Ω–∏—è –º–æ—â–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π."
	
	# –ü–æ–¥—Å–∫–∞–∑–∫–∞ –¥–ª—è –±–æ–∂–µ—Å—Ç–≤–µ–Ω–Ω—ã—Ö –¥—É—à
	if divine_souls_label:
		divine_souls_label.mouse_filter = Control.MOUSE_FILTER_STOP
		divine_souls_label.tooltip_text = "–ë–æ–∂–µ—Å—Ç–≤–µ–Ω–Ω—ã–µ –¥—É—à–∏ –ø–æ–ª—É—á–∞—é—Ç—Å—è –∑–∞ –ø–æ–±–µ–¥—É –Ω–∞–¥ –º–∏—Ñ–∏—á–µ—Å–∫–∏–º–∏ –≤—Ä–∞–≥–∞–º–∏.\n–ë—É–¥—É—Ç –≤–≤–µ–¥–µ–Ω—ã –≤ —Å–ª–µ–¥—É—é—â–∏—Ö –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è—Ö."

func _initialize_character_music():
	"""–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ—Ç –º—É–∑—ã–∫—É –¥–ª—è —ç–∫—Ä–∞–Ω–∞ –ø–æ–¥–≥–æ—Ç–æ–≤–∫–∏ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞"""
	var music_player = get_node_or_null("/root/MusicPlayer")
	if music_player:
		# –ó–∞–≥—Ä—É–∂–∞–µ–º –º—É–∑—ã–∫–∞–ª—å–Ω—ã–π —Ñ–∞–π–ª –¥–ª—è –ø–æ–¥–≥–æ—Ç–æ–≤–∫–∏ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞
		var character_music = preload("res://Audio/Music/Background/Action 5 Loop.ogg")
		if character_music:
			# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –∏–≥—Ä–∞–µ—Ç –ª–∏ —É–∂–µ –Ω—É–∂–Ω–∞—è –º—É–∑—ã–∫–∞
			if not music_player.is_playing_music(character_music):
				music_player.play_music(character_music, true, true)  # fade_in=true, crossfade=true
			else:
				pass  # –ú—É–∑—ã–∫–∞ —É–∂–µ –∏–≥—Ä–∞–µ—Ç
		else:
			print("–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–π —Ñ–∞–π–ª –Ω–µ –Ω–∞–π–¥–µ–Ω: res://Audio/Music/Background/Action 5 Loop.ogg")
	else:
		print("MusicPlayer –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ –∞–≤—Ç–æ–∑–∞–≥—Ä—É–∑–∫–∞—Ö")

func _exit_tree() -> void:
	"""–û—á–∏—Å—Ç–∫–∞ –ø—Ä–∏ –≤—ã—Ö–æ–¥–µ –∏–∑ —Å—Ü–µ–Ω—ã"""
	if soul_vortex:
		if soul_vortex.has_method("cleanup"):
			soul_vortex.cleanup()
		soul_vortex.queue_free()
	
	if soul_sculptor:
		soul_sculptor.queue_free()

func _style_journey_button():
	"""–°—Ç–∏–ª–∏–∑—É–µ—Ç –∫–Ω–æ–ø–∫—É '–û—Ç–ø—Ä–∞–≤–∏—Ç—å—Å—è –≤ –ø—É—Ç–µ—à–µ—Å—Ç–≤–∏–µ' –≤ —Å—Ç–∏–ª–µ dark fantasy"""
	# –£–≤–µ–ª–∏—á–∏–≤–∞–µ–º —Ä–∞–∑–º–µ—Ä –∫–Ω–æ–ø–∫–∏ –∏ –æ–ø—É—Å–∫–∞–µ–º –Ω–∏–∂–µ
	start_journey_button.custom_minimum_size = Vector2(350, 80)
	start_journey_button.size = Vector2(350, 80)
	start_journey_button.position.y += 80  # –û–ø—É—Å–∫–∞–µ–º –Ω–∞ 80 –ø–∏–∫—Å–µ–ª–µ–π –Ω–∏–∂–µ
	
	# –°–æ–∑–¥–∞–µ–º —Ç–µ–º–Ω—ã–π —Ñ–æ–Ω –≤ —Å—Ç–∏–ª–µ dark fantasy
	var normal_style = StyleBoxFlat.new()
	normal_style.bg_color = Color(0.08, 0.08, 0.12, 0.95)  # –û—á–µ–Ω—å —Ç–µ–º–Ω—ã–π, –ø–æ—á—Ç–∏ —á–µ—Ä–Ω—ã–π
	normal_style.border_color = Color(0.2, 0.5, 0.7, 1.0)  # –ì–æ–ª—É–±–∞—è —Ä–∞–º–∫–∞
	normal_style.border_width_left = 3
	normal_style.border_width_right = 3
	normal_style.border_width_top = 3
	normal_style.border_width_bottom = 3
	normal_style.corner_radius_top_left = 8
	normal_style.corner_radius_top_right = 8
	normal_style.corner_radius_bottom_left = 8
	normal_style.corner_radius_bottom_right = 8
	normal_style.shadow_size = 10
	normal_style.shadow_color = Color(0.1, 0.3, 0.5, 0.5)  # –ì–æ–ª—É–±–æ–≤–∞—Ç–∞—è —Ç–µ–Ω—å
	normal_style.shadow_offset = Vector2(0, 3)
	
	# –°—Ç–∏–ª—å –ø—Ä–∏ –Ω–∞–≤–µ–¥–µ–Ω–∏–∏ - –±–æ–ª–µ–µ —è—Ä–∫–∏–π, –Ω–æ –≤—Å–µ –µ—â–µ —Ç–µ–º–Ω—ã–π
	var hover_style = StyleBoxFlat.new()
	hover_style.bg_color = Color(0.12, 0.15, 0.2, 0.98)  # –¢–µ–º–Ω–æ-—Å–∏–Ω–µ–≤–∞—Ç—ã–π –æ—Ç—Ç–µ–Ω–æ–∫
	hover_style.border_color = Color(0.3, 0.7, 0.9, 1.0)  # –Ø—Ä–∫–∞—è –≥–æ–ª—É–±–∞—è —Ä–∞–º–∫–∞
	hover_style.border_width_left = 4
	hover_style.border_width_right = 4
	hover_style.border_width_top = 4
	hover_style.border_width_bottom = 4
	hover_style.corner_radius_top_left = 8
	hover_style.corner_radius_top_right = 8
	hover_style.corner_radius_bottom_left = 8
	hover_style.corner_radius_bottom_right = 8
	hover_style.shadow_size = 15
	hover_style.shadow_color = Color(0.2, 0.6, 0.9, 0.6)  # –ì–æ–ª—É–±–æ–µ —Å–≤–µ—á–µ–Ω–∏–µ
	hover_style.shadow_offset = Vector2(0, 0)
	
	# –°—Ç–∏–ª—å –ø—Ä–∏ –Ω–∞–∂–∞—Ç–∏–∏ - –µ—â–µ —Ç–µ–º–Ω–µ–µ
	var pressed_style = StyleBoxFlat.new()
	pressed_style.bg_color = Color(0.05, 0.05, 0.08, 1.0)  # –ü–æ—á—Ç–∏ —á–µ—Ä–Ω—ã–π
	pressed_style.border_color = Color(0.15, 0.4, 0.6, 1.0)  # –¢–µ–º–Ω–æ-–≥–æ–ª—É–±–∞—è —Ä–∞–º–∫–∞
	pressed_style.border_width_left = 2
	pressed_style.border_width_right = 2
	pressed_style.border_width_top = 2
	pressed_style.border_width_bottom = 2
	pressed_style.corner_radius_top_left = 8
	pressed_style.corner_radius_top_right = 8
	pressed_style.corner_radius_bottom_left = 8
	pressed_style.corner_radius_bottom_right = 8
	pressed_style.shadow_size = 5
	pressed_style.shadow_color = Color(0, 0, 0, 0.9)
	pressed_style.shadow_offset = Vector2(0, 1)
	
	# –ü—Ä–∏–º–µ–Ω—è–µ–º —Å—Ç–∏–ª–∏
	start_journey_button.add_theme_stylebox_override("normal", normal_style)
	start_journey_button.add_theme_stylebox_override("hover", hover_style)
	start_journey_button.add_theme_stylebox_override("pressed", pressed_style)
	
	# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º —Ç–µ–∫—Å—Ç –≤ —Å—Ç–∏–ª–µ dark fantasy
	start_journey_button.add_theme_font_size_override("font_size", 20)
	start_journey_button.add_theme_color_override("font_color", Color(0.85, 0.9, 0.95, 1.0))  # –õ–µ–≥–∫–∏–π –≥–æ–ª—É–±–æ–≤–∞—Ç—ã–π –æ—Ç—Ç–µ–Ω–æ–∫
	start_journey_button.add_theme_color_override("font_hover_color", Color(0.9, 0.95, 1.0, 1.0))  # –°–≤–µ—Ç–ª–æ-–≥–æ–ª—É–±–æ–π –ø—Ä–∏ –Ω–∞–≤–µ–¥–µ–Ω–∏–∏
	start_journey_button.add_theme_color_override("font_pressed_color", Color(0.7, 0.75, 0.8, 1.0))  # –ü—Ä–∏–≥–ª—É—à–µ–Ω–Ω—ã–π –ø—Ä–∏ –Ω–∞–∂–∞—Ç–∏–∏
	
	# –î–æ–±–∞–≤–ª—è–µ–º –≥–æ–ª—É–±–æ–≤–∞—Ç—É—é —Ç–µ–Ω—å –¥–ª—è —Ç–µ–∫—Å—Ç–∞
	start_journey_button.add_theme_color_override("font_shadow_color", Color(0.0, 0.2, 0.4, 0.8))
	start_journey_button.add_theme_constant_override("shadow_offset_x", 2)
	start_journey_button.add_theme_constant_override("shadow_offset_y", 2)
